worked on google auth in backend

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,8 @@ PORT=5000
 
 MONGO_URI=mongodb+srv://saloniduggal24:SaloniMongo2025!@cluster0.3bsxjed.mongodb.net/miniCRM?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=yourSuperSecretKey123
+GOOGLE_CLIENT_ID=1056083452714-ngbiuq08o73dilcp7ku6ib2j6fb2naac.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+SESSION_SECRET=secureMiniCrm$321
+
+
