--- a/mini-crm-frontend/package.json
+++ b/mini-crm-frontend/package.json
@@ -9,7 +9,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "proxy": "http://localhost:5000"
+
   },
   "scripts": {
     "start": "react-scripts start",
